--- a/StavvyBird/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/StavvyBird/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -50,27 +50,27 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.14901961389999999" green="0.14901961389999999" blue="0.14901961389999999" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="M6m-7y-Fxl" secondAttribute="bottom" constant="24" id="3C1-mA-Xl0"/>
-                            <constraint firstItem="ecT-KN-KbQ" firstAttribute="top" secondItem="yAJ-pv-Edz" secondAttribute="bottom" constant="120" id="4FH-q0-7DQ">
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="M6m-7y-Fxl" secondAttribute="bottom" priority="999" constant="24" id="3C1-mA-Xl0"/>
+                            <constraint firstItem="ecT-KN-KbQ" firstAttribute="top" secondItem="yAJ-pv-Edz" secondAttribute="bottom" priority="999" constant="120" id="4FH-q0-7DQ">
                                 <variation key="heightClass=regular-widthClass=regular" constant="250"/>
                             </constraint>
-                            <constraint firstItem="M6m-7y-Fxl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="HSF-oQ-5ci"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yAJ-pv-Edz" secondAttribute="trailing" constant="120" id="J2H-4X-UjB">
+                            <constraint firstItem="M6m-7y-Fxl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" priority="999" id="HSF-oQ-5ci"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yAJ-pv-Edz" secondAttribute="trailing" priority="999" constant="120" id="J2H-4X-UjB">
                                 <variation key="heightClass=regular-widthClass=regular" constant="250"/>
                             </constraint>
-                            <constraint firstItem="eCY-Un-8Cj" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Qvy-xG-qmr"/>
-                            <constraint firstItem="ecT-KN-KbQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Sd3-dm-aaH"/>
-                            <constraint firstItem="yAJ-pv-Edz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="120" id="Tf5-gz-XlJ">
+                            <constraint firstItem="eCY-Un-8Cj" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" priority="999" id="Qvy-xG-qmr"/>
+                            <constraint firstItem="ecT-KN-KbQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" priority="999" id="Sd3-dm-aaH"/>
+                            <constraint firstItem="yAJ-pv-Edz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" priority="999" constant="120" id="Tf5-gz-XlJ">
                                 <variation key="heightClass=regular-widthClass=regular" constant="250"/>
                             </constraint>
-                            <constraint firstItem="yAJ-pv-Edz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="dB0-if-Ydz">
+                            <constraint firstItem="yAJ-pv-Edz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" priority="999" constant="120" id="dB0-if-Ydz">
                                 <variation key="heightClass=regular-widthClass=regular" constant="250"/>
                             </constraint>
-                            <constraint firstItem="M6m-7y-Fxl" firstAttribute="top" secondItem="ecT-KN-KbQ" secondAttribute="bottom" constant="8" id="hBB-xH-MPO"/>
-                            <constraint firstItem="eCY-Un-8Cj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="m4k-Ho-hvb"/>
-                            <constraint firstAttribute="bottom" secondItem="eCY-Un-8Cj" secondAttribute="bottom" id="mgp-YW-Aw4"/>
-                            <constraint firstItem="eCY-Un-8Cj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="xk6-NN-sQ8"/>
-                            <constraint firstItem="yAJ-pv-Edz" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ypR-Ec-Ky0"/>
+                            <constraint firstItem="M6m-7y-Fxl" firstAttribute="top" secondItem="ecT-KN-KbQ" secondAttribute="bottom" priority="999" constant="8" id="hBB-xH-MPO"/>
+                            <constraint firstItem="eCY-Un-8Cj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" priority="999" id="m4k-Ho-hvb"/>
+                            <constraint firstAttribute="bottom" secondItem="eCY-Un-8Cj" secondAttribute="bottom" priority="999" id="mgp-YW-Aw4"/>
+                            <constraint firstItem="eCY-Un-8Cj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" priority="999" id="xk6-NN-sQ8"/>
+                            <constraint firstItem="yAJ-pv-Edz" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" priority="999" id="ypR-Ec-Ky0"/>
                         </constraints>
                     </view>
                 </viewController>
